--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ^3.27.1
 
 dependencies:
+  app_links: ^6.3.3
   collection: ^1.19.0
   cupertino_icons: ^1.0.8
   cupertino_sidebar: ^1.0.1
