--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -6,17 +6,19 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  app_links: ^6.3.3
   crypto: ^3.0.6
   dio: ^5.7.0
   dmdata_oauth_api_client:
     path: ../dmdata_oauth_api_client
   flutter:
     sdk: flutter
-  flutter_appauth: ^8.0.3
-  flutter_appauth_platform_interface: ^8.0.0
   flutter_secure_storage: ^9.2.2
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  oauth2: ^2.0.3
+  url_launcher: ^6.3.1
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   build_runner: ^2.4.13
