fix: WindowsのPATH追加方法を修正

--- a/.github/actions/setup-application-runtime/action.yaml
+++ b/.github/actions/setup-application-runtime/action.yaml
@@ -38,8 +38,7 @@ runs:
     - name: Setup PATH (Windows)
       if: ${{ runner.os == 'Windows' }}
       shell: bash
-      run: |
-        cygpath -w ~/.pub-cache/bin >> $Env:GITHUB_PATH
+      run: echo "~/.pub-cache/bin" >> $GITHUB_PATH
 
     - name: Resolve dependencies
       shell: bash
