--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -447,4 +447,4 @@ jobs:
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           name: EQDashboard-windows
-          path: app/build/windows/
+          path: app/build/windows/x64/runner/Release
