fix: JsonSerializableをRetrofitGeneratorの前に実行

--- a/packages/dmdata_api/build.yaml
+++ b/packages/dmdata_api/build.yaml
@@ -9,3 +9,10 @@ targets:
       json_serializable:
         options:
           checked: true
+global_options:
+  freezed:
+    runs_before:
+      - json_serializable
+  json_serializable:
+    runs_before:
+      - retrofit_generator
